--- a/src/app/fotozas/fotozas-link/fotozas-link.component.html
+++ b/src/app/fotozas/fotozas-link/fotozas-link.component.html
@@ -8,7 +8,7 @@
     </div>
   </ng-container>
 
-  <button [disabled]="eppFrissit"
+  <button [disabled]="spinnerservice.eppFrissit"
           (click)="fotozaslink()"
           class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
     Új fotózás link
