--- a/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
+++ b/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
@@ -18,15 +18,15 @@
       </div>
 
       <div class="row no-gutters editform-row">
-        <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-        <button class="btn btn-sm btn-default" [disabled]="eppFrissit" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+        <button class="btn btn-sm btn-primary" [disabled]="!f.valid || spinnerservice.eppFrissit" type="submit">Ok</button>
+        <button class="btn btn-sm btn-default" [disabled]="spinnerservice.eppFrissit" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
       </div>
     </ng-container>
 
     <ng-container *ngIf="kesz">
       <div>Az új bizonylat elkészült, bizonylatkód: {{ujbizonylatkod}}</div>
       <div class="row no-gutters editform-row">
-        <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
+        <button class="btn btn-sm btn-primary" [disabled]="!f.valid || spinnerservice.eppFrissit" type="submit">Ok</button>
       </div>
     </ng-container>
   </form>
