--- a/src/app/bizonylat/bizonylat-list/bizonylat-list.component.html
+++ b/src/app/bizonylat/bizonylat-list/bizonylat-list.component.html
@@ -6,8 +6,8 @@
                         [(megrendelesszempont)]="megrendelesszempont"
                         [(szempont)]="szempont"
                         [(minta)]="minta"
-                        [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-                        [enUj]="!eppFrissit" (Uj)="doUjtetel()">
+                        [enKereses]="!spinnerservice.eppFrissit" (Kereses)="onKereses()"
+                        [enUj]="!spinnerservice.eppFrissit" (Uj)="doUjtetel()">
   </app-bizonylattoolbar>
 
   <div appHscroll style="overflow-x: auto;overflow-y: hidden;margin-bottom: 10px">
@@ -37,7 +37,7 @@
     </app-bizonylat-egy>
   </ng-template>
 
-  <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
+  <app-toolbarfooter [enKereses]="!elsokereses && !spinnerservice.eppFrissit"
                      [rekordszam]="Dto.length"
                      [osszesrekord]="OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
