--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -147,7 +147,7 @@
 
   <div class="alapkeret">
     <nav>
-      <button [disabled]="eppFrissit" (click)="onTetelUjElott()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="spinnerservice.eppFrissit" (click)="onTetelUjElott()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-plus" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
     </nav>
@@ -163,7 +163,7 @@
 
     <ng-template #gridtorles>
       <app-tetel-torles [cim]="'Bizonylattétel'"
-                        [eppFrissit]="eppFrissit"
+                        [eppFrissit]="spinnerservice.eppFrissit"
                         (eventTorles)="onTeteltorles($event)">
       </app-tetel-torles>
     </ng-template>
@@ -179,9 +179,9 @@
   </div>
 
   <div class="row no-gutters" style="margin-bottom: 10px">
-    <button class="btn btn-sm btn-primary" [disabled]="eppFrissit || SzerkesztesMode !== 1"
+    <button class="btn btn-sm btn-primary" [disabled]="spinnerservice.eppFrissit || SzerkesztesMode !== 1"
             type="button" (click)="onSubmit()">Ok</button>
-    <button class="btn btn-sm btn-default" [disabled]="eppFrissit || SzerkesztesMode !== 1"
+    <button class="btn btn-sm btn-default" [disabled]="spinnerservice.eppFrissit || SzerkesztesMode !== 1"
             style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
   </div>
 </div>
