--- a/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
@@ -211,9 +211,9 @@
   <div class="row no-gutters" style="margin-bottom: 10px">
     <div class="col-md-2">
     </div>
-    <button class="btn btn-sm btn-primary" [disabled]="eppFrissit"
+    <button class="btn btn-sm btn-primary" [disabled]="spinnerservice.eppFrissit"
             type="button" (click)="onSubmit()">Ok</button>
-    <button class="btn btn-sm btn-default" [disabled]="eppFrissit"
+    <button class="btn btn-sm btn-default" [disabled]="spinnerservice.eppFrissit"
             style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
   </div>
 
