--- a/src/app/cikk/cikk-list/cikk-list.component.html
+++ b/src/app/cikk/cikk-list/cikk-list.component.html
@@ -4,8 +4,8 @@
   <app-toolbar [Szurok]="szurok"
                [(szempont)]="szempont"
                [(minta)]="minta"
-               [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit && jog" (Uj)="doUjtetel()"
+               [enKereses]="!spinnerservice.eppFrissit" (Kereses)="onKereses()"
+               [enUj]="!spinnerservice.eppFrissit && jog" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
   <app-tabla #tabla
@@ -28,20 +28,20 @@
     <div class="alapkeret">
       <div>
         <nav>
-          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-file" aria-hidden="true"></i>
           </button>
 
-          <button [disabled]="eppFrissit || !jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit || !jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
-          <button [disabled]="eppFrissit || !jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit || !jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-edit" aria-hidden="true"></i>
           </button>
-          <button [disabled]="eppFrissit" (click)="doNav(28)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(28)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Beszerzés
           </button>
-          <button [disabled]="eppFrissit" (click)="doNav(29)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(29)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Kivét
           </button>
         </nav>
@@ -58,7 +58,7 @@
       <ng-container *ngIf="egymode === 2">
         <div [@rowanimation]>
           <app-tetel-torles [cim]="cikkservice.cim"
-                            [eppFrissit]="eppFrissit"
+                            [eppFrissit]="spinnerservice.eppFrissit"
                             (eventTorles)="onTorles($event)">
           </app-tetel-torles>
         </div>
@@ -90,7 +90,7 @@
     </div>
   </ng-template>
 
-  <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
+  <app-toolbarfooter [enKereses]="!elsokereses && !spinnerservice.eppFrissit"
                      [rekordszam]="Dto.length"
                      [osszesrekord]="osszesrekord"
                      (KeresesTovabb)="onKeresesTovabb()">
