--- a/src/app/onlineszamla/onlineszamlaellenorzese/onlineszamlaellenorzese.component.html
+++ b/src/app/onlineszamla/onlineszamlaellenorzese/onlineszamlaellenorzese.component.html
@@ -3,7 +3,7 @@
   <app-toolbar [Szurok]="szurok"
                [(szempont)]="szempont"
                [(minta)]="minta"
-               [enKereses]="!eppFrissit" (Kereses)="onKereses()"
+               [enKereses]="!spinnerservice.eppFrissit" (Kereses)="onKereses()"
                [visUj]="false">
   </app-toolbar>
   <table class="table table-bordered table-sm table-responsive" style="border: none">
@@ -37,7 +37,7 @@
     </ng-container>
     </tbody>
   </table>
-  <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
+  <app-toolbarfooter [enKereses]="!elsokereses && !spinnerservice.eppFrissit"
                      [rekordszam]="Dto.length"
                      [osszesrekord]="OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
