--- a/src/app/penztar/penztar-list/penztar-list.component.html
+++ b/src/app/penztar/penztar-list/penztar-list.component.html
@@ -3,8 +3,8 @@
   <app-toolbar [Szurok]="szurok"
                [(szempont)]="ekDto.szempont"
                [(minta)]="ekDto.minta"
-               [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit && jog" (Uj)="doUjtetel()">
+               [enKereses]="!spinnerservice.eppFrissit" (Kereses)="onKereses()"
+               [enUj]="!spinnerservice.eppFrissit && jog" (Uj)="doUjtetel()">
   </app-toolbar>
   <app-tabla #tabla
              [items]="Dto"
@@ -24,22 +24,22 @@
     <div class="alapkeret">
       <div>
         <nav>
-          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-file" aria-hidden="true"></i>
           </button>
-          <button [disabled]="eppFrissit || !jog || !nyitva"
+          <button [disabled]="spinnerservice.eppFrissit || !jog || !nyitva"
                   (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
-          <button [disabled]="eppFrissit || !jog || !nyitva"
+          <button [disabled]="spinnerservice.eppFrissit || !jog || !nyitva"
                   (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-edit" aria-hidden="true"></i>
           </button>
 
-          <button [disabled]="eppFrissit" (click)="doNav(13)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(13)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Tételek
           </button>
-          <button [disabled]="eppFrissit" (click)="doNav(14)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(14)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Export
           </button>
         </nav>
@@ -57,7 +57,7 @@
       <ng-container *ngIf="egymode === 2">
         <div [@rowanimation]>
           <app-tetel-torles [cim]="penztarservice.cim"
-                            [eppFrissit]="eppFrissit"
+                            [eppFrissit]="spinnerservice.eppFrissit"
                             (eventTorles)="onTorles($event)">
           </app-tetel-torles>
         </div>
