--- a/src/app/penztartetel/penztartetel-list/penztartetel-list.component.html
+++ b/src/app/penztartetel/penztartetel-list/penztartetel-list.component.html
@@ -3,8 +3,8 @@
   <app-toolbar [Szurok]="szurok"
                [(szempont)]="szempont"
                [(minta)]="minta"
-               [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit && jog && nyitva" (Uj)="doUjtetel()">
+               [enKereses]="!spinnerservice.eppFrissit" (Kereses)="onKereses()"
+               [enUj]="!spinnerservice.eppFrissit && jog && nyitva" (Uj)="doUjtetel()">
   </app-toolbar>
   <app-tabla #tabla
              [items]="Dto"
@@ -18,7 +18,7 @@
     </app-penztartetel-szerkesztes>
   </ng-template>
 
-  <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
+  <app-toolbarfooter [enKereses]="!elsokereses && !spinnerservice.eppFrissit"
                      [rekordszam]="Dto.length"
                      [osszesrekord]="OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
