--- a/src/app/primitiv/afakulcs/afakulcs-list/afakulcs-list.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-list/afakulcs-list.component.html
@@ -5,8 +5,8 @@
   <app-toolbar [Szurok]="szurok"
                [(szempont)]="ekDto.szempont"
                [(minta)]="ekDto.minta"
-               [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-               [enUj]="!eppFrissit && jog" (Uj)="doUjtetel()"
+               [enKereses]="!spinnerservice.eppFrissit" (Kereses)="onKereses()"
+               [enUj]="!spinnerservice.eppFrissit && jog" (Uj)="doUjtetel()"
                [visZoom]="zoom" (StopZoom)="onStopzoom()">
   </app-toolbar>
 
@@ -30,14 +30,14 @@
     <div class="alapkeret">
       <div>
         <nav>
-          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-file" aria-hidden="true"></i>
           </button>
 
-          <button [disabled]="eppFrissit || !jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit || !jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
-          <button [disabled]="eppFrissit || !jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit || !jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-edit" aria-hidden="true"></i>
           </button>
         </nav>
@@ -54,7 +54,7 @@
       <ng-container *ngIf="egymode === 2">
         <div [@rowanimation]>
           <app-tetel-torles [cim]="afakulcsservice.cim"
-                            [eppFrissit]="eppFrissit"
+                            [eppFrissit]="spinnerservice.eppFrissit"
                             (eventTorles)="onTorles($event)">
           </app-tetel-torles>
         </div>
