--- a/src/app/projekt/projekt-list/projekt-list.component.html
+++ b/src/app/projekt/projekt-list/projekt-list.component.html
@@ -7,9 +7,9 @@
                       [(teendoszempont)]="teendoszempont"
                       [(szempont)]="szempont"
                       [(minta)]="minta"
-                      [enKereses]="!eppFrissit" (Kereses)="onKereses()"
-                      [enUj]="!eppFrissit && mod" (Uj)="doUjtetel()"
-                      [enExport]="!eppFrissit" (Export)="onExport($event)">
+                      [enKereses]="!spinnerservice.eppFrissit" (Kereses)="onKereses()"
+                      [enUj]="!spinnerservice.eppFrissit && mod" (Uj)="doUjtetel()"
+                      [enExport]="!spinnerservice.eppFrissit" (Export)="onExport($event)">
   </app-projekttoolbar>
 
   <ng-container *ngIf="export">
@@ -37,43 +37,43 @@
     <div class="alapkeret">
       <div>
         <nav>
-          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-file" aria-hidden="true"></i>
           </button>
 
-          <button [disabled]="eppFrissit || !mod" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit || !mod" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
 
-          <button [disabled]="eppFrissit || !mod" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit || !mod" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             <i class="fa fa-edit" aria-hidden="true"></i>
           </button>
 
-          <button [disabled]="eppFrissit || !mod" (click)="doNav(19)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit || !mod" (click)="doNav(19)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Stsz
           </button>
-          <button [disabled]="eppFrissit || !mod" (click)="doNav(20)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit || !mod" (click)="doNav(20)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Műszaki állapot
           </button>
-          <button [disabled]="eppFrissit || !mod" (click)="doNav(21)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit || !mod" (click)="doNav(21)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Inverter
           </button>
-          <button [disabled]="eppFrissit || !mod" (click)="doNav(22)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit || !mod" (click)="doNav(22)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Napelem
           </button>
-          <button [disabled]="eppFrissit" (click)="doNav(23)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(23)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Iratminta
           </button>
-          <button [disabled]="eppFrissit" (click)="doNav(24)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(24)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Bizonylat és irat
           </button>
-          <button [disabled]="eppFrissit" (click)="doNav(25)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(25)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Számlázási rend
           </button>
-          <button [disabled]="eppFrissit" (click)="doNav(26)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit" (click)="doNav(26)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Teendő
           </button>
-          <button [disabled]="eppFrissit || !mod" (click)="doNav(27)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="spinnerservice.eppFrissit || !mod" (click)="doNav(27)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Dátumok
           </button>
         </nav>
@@ -91,7 +91,7 @@
       <ng-container *ngIf="egymode === 2">
         <div [@rowanimation]>
           <app-tetel-torles [cim]="projektservice.cim"
-                            [eppFrissit]="eppFrissit"
+                            [eppFrissit]="spinnerservice.eppFrissit"
                             (eventTorles)="onTorles($event)">
           </app-tetel-torles>
         </div>
@@ -106,7 +106,7 @@
       </ng-container>
 
       <ng-container *ngIf="egymode === 19">
-        <div [@rowanimation]><app-projekt-statusz [eppFrissit]="eppFrissit"
+        <div [@rowanimation]><app-projekt-statusz [eppFrissit]="spinnerservice.eppFrissit"
                                                   [DtoOriginal]="Dto[DtoSelectedIndex]"
                                                   (eventOk)="onSegedOk($event)"
                                                   (eventCancel)="onSegedCancel()">
@@ -114,7 +114,7 @@
       </ng-container>
       <ng-container *ngIf="egymode === 20">
         <div [@rowanimation]>
-          <app-projekt-muszakiallapot [eppFrissit]="eppFrissit"
+          <app-projekt-muszakiallapot [eppFrissit]="spinnerservice.eppFrissit"
                                       [DtoOriginal]="Dto[DtoSelectedIndex]"
                                       (eventOk)="onSegedOk($event)"
                                       (eventCancel)="onSegedCancel()">
@@ -123,7 +123,7 @@
       </ng-container>
       <ng-container *ngIf="egymode === 21">
         <div [@rowanimation]>
-          <app-projekt-inverter [eppFrissit]="eppFrissit"
+          <app-projekt-inverter [eppFrissit]="spinnerservice.eppFrissit"
                                 [DtoOriginal]="Dto[DtoSelectedIndex]"
                                 (eventOk)="onSegedOk($event)"
                                 (eventCancel)="onSegedCancel()">
@@ -132,7 +132,7 @@
       </ng-container>
       <ng-container *ngIf="egymode === 22">
         <div [@rowanimation]>
-          <app-projekt-napelem [eppFrissit]="eppFrissit"
+          <app-projekt-napelem [eppFrissit]="spinnerservice.eppFrissit"
                                [DtoOriginal]="Dto[DtoSelectedIndex]"
                                (eventOk)="onSegedOk($event)"
                                (eventCancel)="onSegedCancel()">
@@ -141,7 +141,7 @@
       </ng-container>
       <ng-container *ngIf="egymode === 27">
         <div [@rowanimation]>
-          <app-projekt-datumok [eppFrissit]="eppFrissit"
+          <app-projekt-datumok [eppFrissit]="spinnerservice.eppFrissit"
                                [DtoOriginal]="Dto[DtoSelectedIndex]"
                                (eventOk)="onSegedOk($event)"
                                (eventCancel)="onSegedCancel()">
@@ -177,7 +177,7 @@
     </div>
   </ng-template>
 
-  <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
+  <app-toolbarfooter [enKereses]="!elsokereses && !spinnerservice.eppFrissit"
                      [rekordszam]="Dto.length"
                      [osszesrekord]="OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
