--- a/src/app/ugyfelterlog/ugyfelterlog.component.html
+++ b/src/app/ugyfelterlog/ugyfelterlog.component.html
@@ -3,7 +3,7 @@
   <app-toolbar [Szurok]="szurok"
                [(szempont)]="szempont"
                [(minta)]="minta"
-               [enKereses]="!eppFrissit" (Kereses)="onKereses()"
+               [enKereses]="!spinnerservice.eppFrissit" (Kereses)="onKereses()"
                [visUj]="false">
   </app-toolbar>
 
@@ -13,7 +13,7 @@
              [enIdclick]="false">
   </app-tabla>
 
-  <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
+  <app-toolbarfooter [enKereses]="!elsokereses && !spinnerservice.eppFrissit"
                      [rekordszam]="Dto.length"
                      [osszesrekord]="OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
