--- a/src/app/riport/koveteles/koveteles.component.html
+++ b/src/app/riport/koveteles/koveteles.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Követelések</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
