--- a/src/app/cikk/cikk-list/cikk-list.component.html
+++ b/src/app/cikk/cikk-list/cikk-list.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" {appSpinner[="eppFrissit">
   <h5 *ngIf="!zoom">{{cikkservice.cim}}</h5>
   <h5 *ngIf="zoom">{{cikkservice.cim}} - zoom</h5>
   <app-toolbar [Szurok]="szurok"
