--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" {appSpinner[="eppFrissit">
   <h5 *ngIf="uj">Új {{cikkservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{cikkservice.cim}} módosítása</h5>
 
