--- a/src/app/particio/particio-egy/particio-egy.component.html
+++ b/src/app/particio/particio-egy/particio-egy.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{particioservice.cim}}</h5>
   <div style="margin-bottom: 10px">
     <div style="font-size: smaller">{{Dto.Megnevezes}}</div>
