--- a/src/app/penztar/penztar-export/penztar-export.component.html
+++ b/src/app/penztar/penztar-export/penztar-export.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Pénztártételek exportja</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
