--- a/src/app/penztar/penztar-list/penztar-list.component.html
+++ b/src/app/penztar/penztar-list/penztar-list.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{penztarservice.cim}}</h5>
   <app-toolbar [Szurok]="szurok"
                [(szempont)]="ekDto.szempont"
