--- a/src/app/penztartetel/penztartetel-list/penztartetel-list.component.html
+++ b/src/app/penztartetel/penztartetel-list/penztartetel-list.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{penztartetelservice.cim}}</h5>
   <app-toolbar [Szurok]="szurok"
                [(szempont)]="szempont"
