--- a/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="uj">Új {{felhasznaloservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{felhasznaloservice.cim}} módosítása</h5>
 
