--- a/src/app/primitiv/fizetesimod/fizetesimod-list/fizetesimod-list.component.html
+++ b/src/app/primitiv/fizetesimod/fizetesimod-list/fizetesimod-list.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="!zoom">{{fizetesimodservice.cim}}</h5>
   <h5 *ngIf="zoom">{{fizetesimodservice.cim}} - zoom</h5>
   <app-toolbar [Szurok]="szurok"
