--- a/src/app/primitiv/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
+++ b/src/app/primitiv/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="uj">Új {{fizetesimodservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{fizetesimodservice.cim}} módosítása</h5>
 
