--- a/src/app/primitiv/irattipus/irattipus-list/irattipus-list.component.html
+++ b/src/app/primitiv/irattipus/irattipus-list/irattipus-list.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="!zoom">{{irattipusservice.cim}}</h5>
   <h5 *ngIf="zoom">{{irattipusservice.cim}} - zoom</h5>
   <app-toolbar [Szurok]="szurok"
