--- a/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
+++ b/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="uj">Új {{irattipusservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{irattipusservice.cim}} módosítása</h5>
 
