--- a/src/app/primitiv/me/me-list/me-list.component.html
+++ b/src/app/primitiv/me/me-list/me-list.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="!zoom">{{meservice.cim}}</h5>
   <h5 *ngIf="zoom">{{meservice.cim}} - zoom</h5>
   <app-toolbar [Szurok]="szurok"
