--- a/src/app/primitiv/me/me-szerkesztes/me-szerkesztes.component.html
+++ b/src/app/primitiv/me/me-szerkesztes/me-szerkesztes.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="uj">Új {{meservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{meservice.cim}} módosítása</h5>
 
