--- a/src/app/primitiv/penznem/penznem-list/penznem-list.component.html
+++ b/src/app/primitiv/penznem/penznem-list/penznem-list.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="!zoom">{{penznemservice.cim}}</h5>
   <h5 *ngIf="zoom">{{penznemservice.cim}} - zoom</h5>
   <app-toolbar [Szurok]="szurok"
