--- a/src/app/primitiv/teendo/teendo-list/teendo-list.component.html
+++ b/src/app/primitiv/teendo/teendo-list/teendo-list.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="!zoom">{{teendoservice.cim}}</h5>
   <h5 *ngIf="zoom">{{teendoservice.cim}} - zoom</h5>
   <app-toolbar [Szurok]="szurok"
