--- a/src/app/primitiv/teendo/teendo-szerkesztes/teendo-szerkesztes.component.html
+++ b/src/app/primitiv/teendo/teendo-szerkesztes/teendo-szerkesztes.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="uj">Új {{teendoservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{teendoservice.cim}} módosítása</h5>
 
