--- a/src/app/primitiv/termekdij/termekdij-list/termekdij-list.component.html
+++ b/src/app/primitiv/termekdij/termekdij-list/termekdij-list.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="!zoom">{{termekdijservice.cim}}</h5>
   <h5 *ngIf="zoom">{{termekdijservice.cim}} - zoom</h5>
   <app-toolbar [Szurok]="szurok"
