--- a/src/app/projekt/projekt-export/projekt-export.component.html
+++ b/src/app/projekt/projekt-export/projekt-export.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{projektservice.cim}} export</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
