--- a/src/app/ugyfel/ugyfel-list/ugyfel-list.component.html
+++ b/src/app/ugyfel/ugyfel-list/ugyfel-list.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" {appSpinner[="eppFrissit">
   <h5 *ngIf="!zoom">{{ugyfelservice.cim}}</h5>
   <h5 *ngIf="zoom">{{ugyfelservice.cim}} - zoom</h5>
   <app-ugyfeltoolbar [Csoportszurok]="csoportszurok"
