--- a/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
+++ b/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" {appSpinner[="eppFrissit">
   <h5 *ngIf="uj">Új {{ugyfelservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{ugyfelservice.cim}} módosítása</h5>
 
