--- a/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
+++ b/src/app/ugyfelter/ugyfel-ter-link/ugyfel-ter-link.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Ügyféltér link</h5>
   <ng-container *ngIf="kikuldesikodidopontja !== ''">
     <p>Korábban már készült ügyféltér link ({{kikuldesikodidopontja}})!</p>
