--- a/src/app/cikk/cikk-beszerzes-kivet/cikk-beszerzes-kivet.component.html
+++ b/src/app/cikk/cikk-beszerzes-kivet/cikk-beszerzes-kivet.component.html
@@ -1,4 +1,4 @@
-<div class="alapkeret" {appSpinner[="eppFrissit">
+<div class="alapkeret" [appSpinner]="eppFrissit">
   <h5 *ngIf="BizonylattipusKod === 3">Beszerzés</h5>
   <h5 *ngIf="BizonylattipusKod === 2">Kivét</h5>
 
