ügyféltér link fejlesztése

--- a/src/app/ugyfel/ugyfel-list/ugyfel-list.component.html
+++ b/src/app/ugyfel/ugyfel-list/ugyfel-list.component.html
@@ -96,7 +96,7 @@
       <ng-container *ngIf="egymode === 9">
         <div [@rowanimation]>
           <app-ugyfel-ter-link [DtoOriginal]="Dto[DtoSelectedIndex]"
-                               (eventSzerkeszteskesz)="onModositaskesz($event)">
+                               (eventSzerkeszteskesz)="onModositaskeszCsak($event)">
           </app-ugyfel-ter-link>
         </div>
       </ng-container>
