sales email konfigból - partíció kiegészítése konfighoz

--- a/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
+++ b/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
@@ -8,7 +8,7 @@
         <div class="egylabel">Bizonylatkép iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m1"
                autocomplete="off"
-               [(ngModel)]="Dto.BizonylatBizonylatkepIratkod" name="m1">
+               [(ngModel)]="cBizonylat.BizonylatkepIratkod" name="m1">
       </div>
     </div>
 
@@ -17,7 +17,7 @@
         <div class="egylabel">Eredeti példány</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m2"
                autocomplete="off"
-               [(ngModel)]="Dto.BizonylatEredetipeldanyokSzama" name="m2">
+               [(ngModel)]="cBizonylat.EredetipeldanyokSzama" name="m2">
       </div>
     </div>
 
@@ -26,7 +26,7 @@
         <div class="egylabel">Másolatok</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m3"
                autocomplete="off"
-               [(ngModel)]="Dto.BizonylatMasolatokSzama" name="m3">
+               [(ngModel)]="cBizonylat.MasolatokSzama" name="m3">
       </div>
     </div>
 
