--- a/src/app/particio/particio-szallito/particio-szallito.component.html
+++ b/src/app/particio/particio-szallito/particio-szallito.component.html
@@ -8,7 +8,7 @@
         <div class="egylabel">Név</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="m1"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="Dto.SzallitoNev" name="m1">
+               [(ngModel)]="cSzallito.Nev" name="m1">
       </div>
     </div>
 
@@ -17,7 +17,7 @@
         <div class="egylabel">Irányítószám</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="m2"
                autocomplete="off" maxlength="10"
-               [(ngModel)]="Dto.SzallitoIranyitoszam" name="m2">
+               [(ngModel)]="cSzallito.Iranyitoszam" name="m2">
       </div>
     </div>
 
@@ -26,7 +26,7 @@
         <div class="egylabel">Helységnév</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="m3"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="Dto.SzallitoHelysegnev" name="m3">
+               [(ngModel)]="cSzallito.Helysegnev" name="m3">
       </div>
     </div>
 
@@ -35,7 +35,7 @@
         <div class="egylabel">Utca, házszám</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="m4"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="Dto.SzallitoUtcahazszam" name="m4">
+               [(ngModel)]="cSzallito.Utcahazszam" name="m4">
       </div>
     </div>
 
@@ -44,7 +44,7 @@
         <div class="egylabel">Bankszámla 1</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="m5"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="Dto.SzallitoBankszamla1" name="m5">
+               [(ngModel)]="cSzallito.Bankszamla1" name="m5">
       </div>
     </div>
 
@@ -53,7 +53,7 @@
         <div class="egylabel">Bankszámla 2</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="m6"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="Dto.SzallitoBankszamla2" name="m6">
+               [(ngModel)]="cSzallito.Bankszamla2" name="m6">
       </div>
     </div>
 
@@ -62,7 +62,7 @@
         <div class="egylabel">Adó törzsszám</div>
         <input type="text" class="form-control form-control-sm oszlop3" id="m7"
                autocomplete="off" maxlength="8"
-               [(ngModel)]="Dto.SzallitoAdotorzsszam" name="m7">
+               [(ngModel)]="cSzallito.Adotorzsszam" name="m7">
       </div>
     </div>
 
@@ -71,7 +71,7 @@
         <div class="egylabel">Adó áfakód</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="m8"
                autocomplete="off" maxlength="1"
-               [(ngModel)]="Dto.SzallitoAdoafakod" name="m8">
+               [(ngModel)]="cSzallito.Adoafakod" name="m8">
       </div>
     </div>
 
@@ -80,7 +80,7 @@
         <div class="egylabel">Adó megyekód</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="m9"
                autocomplete="off" maxlength="2"
-               [(ngModel)]="Dto.SzallitoAdomegyekod" name="m9">
+               [(ngModel)]="cSzallito.Adomegyekod" name="m9">
       </div>
     </div>
 
