--- a/src/app/particio/particio-volume/particio-volume.component.html
+++ b/src/app/particio/particio-volume/particio-volume.component.html
@@ -8,7 +8,7 @@
         <div class="egylabel">Új volume max. méret</div>
         <input type="number" class="form-control form-control-sm oszlop3" id="m1"
                autocomplete="off"
-               [(ngModel)]="Dto.VolumeUjvolumeMaxmeret" name="m1">
+               [(ngModel)]="cVolume.UjvolumeMaxmeret" name="m1">
       </div>
     </div>
 
@@ -17,7 +17,7 @@
         <div class="egylabel">Új volume elérési út</div>
         <input type="text" class="form-control form-control-sm oszlop6" id="m2"
                autocomplete="off"
-               [(ngModel)]="Dto.VolumeUjvolumeEleresiut" name="m2">
+               [(ngModel)]="cVolume.UjvolumeEleresiut" name="m2">
       </div>
     </div>
 
