--- a/src/app/particio/particio-egy/particio-egy.component.html
+++ b/src/app/particio/particio-egy/particio-egy.component.html
@@ -9,10 +9,7 @@
         Szállító
       </button>
       <button (click)="nav()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        NAV
-      </button>
-      <button (click)="smtp()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        SMTP
+        NAV online számla
       </button>
       <button (click)="bizonylat()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Bizonylat
@@ -45,15 +42,6 @@
                         (eventOk)="onSzerkesztesOk($event)"
                         (eventCancel)="onSzerkesztesCancel()">
       </app-particio-nav>
-    </div>
-  </ng-container>
-
-  <ng-container *ngIf="EgyMode === 32">
-    <div [@rowanimation]>
-      <app-particio-smtp [Dto]="Dto"
-                         (eventOk)="onSzerkesztesOk($event)"
-                         (eventCancel)="onSzerkesztesCancel()">
-      </app-particio-smtp>
     </div>
   </ng-container>
 
