--- a/src/app/particio/particio-projekt/particio-projekt.component.html
+++ b/src/app/particio/particio-projekt/particio-projekt.component.html
@@ -8,7 +8,7 @@
         <div class="egylabel">Ajánlat iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m1"
                autocomplete="off"
-               [(ngModel)]="Dto.ProjektAjanlatIratkod" name="m1">
+               [(ngModel)]="cProjekt.AjanlatIratkod" name="m1">
       </div>
     </div>
 
@@ -17,7 +17,7 @@
         <div class="egylabel">Elégedettségi felmérés iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m2"
                autocomplete="off"
-               [(ngModel)]="Dto.ProjektElegedettsegifelmeresIratkod" name="m2">
+               [(ngModel)]="cProjekt.ElegedettsegiFelmeresIratkod" name="m2">
       </div>
     </div>
 
@@ -26,7 +26,7 @@
         <div class="egylabel">Készrejelentés NKM iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m3"
                autocomplete="off"
-               [(ngModel)]="Dto.ProjektKeszrejelentesDemaszIratkod" name="m3">
+               [(ngModel)]="cProjekt.KeszrejelentesNkmIratkod" name="m3">
       </div>
     </div>
 
@@ -35,7 +35,7 @@
         <div class="egylabel">Készrejelentés ELMŰ-ÉMÁSZ iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m4"
                autocomplete="off"
-               [(ngModel)]="Dto.ProjektKeszrejelentesElmuemaszIratkod" name="m4">
+               [(ngModel)]="cProjekt.KeszrejelentesElmuemaszIratkod" name="m4">
       </div>
     </div>
 
@@ -44,7 +44,7 @@
         <div class="egylabel">Készrejelentés E.ON iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m5"
                autocomplete="off"
-               [(ngModel)]="Dto.ProjektKeszrejelentesEonIratkod" name="m5">
+               [(ngModel)]="cProjekt.KeszrejelentesEonIratkod" name="m5">
       </div>
     </div>
 
@@ -53,7 +53,7 @@
         <div class="egylabel">Munkalap iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m6"
                autocomplete="off"
-               [(ngModel)]="Dto.ProjektMunkalapIratkod" name="m6">
+               [(ngModel)]="cProjekt.MunkalapIratkod" name="m6">
       </div>
     </div>
 
@@ -62,7 +62,7 @@
         <div class="egylabel">Szállítási szerződés iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m7"
                autocomplete="off"
-               [(ngModel)]="Dto.ProjektSzallitasiszerzodesIratkod" name="m7">
+               [(ngModel)]="cProjekt.SzallitasiSzerzodesIratkod" name="m7">
       </div>
     </div>
 
@@ -71,7 +71,7 @@
         <div class="egylabel">Szerződés iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m8"
                autocomplete="off"
-               [(ngModel)]="Dto.ProjektSzerzodesIratkod" name="m8">
+               [(ngModel)]="cProjekt.SzerzodesIratkod" name="m8">
       </div>
     </div>
 
@@ -80,7 +80,7 @@
         <div class="egylabel">Feltételes szerződés iratkód</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="m9"
                autocomplete="off"
-               [(ngModel)]="Dto.ProjektFeltetelesszerzodesIratkod" name="m9">
+               [(ngModel)]="cProjekt.FeltetelesSzerzodesIratkod" name="m9">
       </div>
     </div>
 
